log
Wed 19 Apr 2023 10:07:56 PM UTC: 
 tests:  1|8
total_score: 0/70
aa5b5be
Wed 19 Apr 2023 10:11:06 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:6: error: ‘TreeMap’ has no member named ‘size’
   41 |   map->size = 0;
      |      ^~
treemap.c:43:21: error: ‘lt’ undeclared (first use in this function)
   43 |   map->lower_than = lt;
      |                     ^~
treemap.c:43:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4f88050
Wed 19 Apr 2023 10:12:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:6: error: ‘TreeMap’ has no member named ‘size’
   41 |   map->size = 0;
      |      ^~
Compilation failed
9d6f2fa
Wed 19 Apr 2023 10:12:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
f9e74a6
Thu 20 Apr 2023 02:57:47 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘compareKeys’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                             ^~
treemap.c:78:59: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                                                           ^~
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e3efe56
Thu 20 Apr 2023 02:58:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘compareKeys’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                             ^~
treemap.c:78:59: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                                                           ^~
treemap.c:84:21: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   84 |         currentNode = (cmpResult < 0)  currentNode->left : currentNode->right;
      |                     ^
treemap.c:84:38: error: expected ‘;’ before ‘currentNode’
   84 |         currentNode = (cmpResult < 0)  currentNode->left : currentNode->right;
      |                                      ^ ~~~~~~~~~~~
      |                                      ;
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1600c04
Thu 20 Apr 2023 02:59:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘compareKeys’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                             ^~
treemap.c:78:59: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                                                           ^~
treemap.c:84:21: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   84 |         currentNode = (cmpResult < 0) : currentNode->left : currentNode->right;
      |                     ^
treemap.c:84:38: error: expected ‘;’ before ‘:’ token
   84 |         currentNode = (cmpResult < 0) : currentNode->left : currentNode->right;
      |                                      ^~
      |                                      ;
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
17f864e
Thu 20 Apr 2023 02:59:46 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘compareKeys’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                             ^~
treemap.c:78:59: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                                                           ^~
Compilation failed
870616d
Thu 20 Apr 2023 03:01:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘cmp’
   78 |         int cmpResult = tree->cmp(key, currentNode->key);
      |                             ^~
treemap.c:78:51: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->cmp(key, currentNode->key);
      |                                                   ^~
Compilation failed
95ada69
Thu 20 Apr 2023 03:02:45 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘cmp’
   78 |         int cmpResult = tree->cmp(key , currentNode->pair->key);
      |                             ^~
Compilation failed
d9fcb1e
